--- a/_posts/2022-09-25-크로스-에디터.md
+++ b/_posts/2022-09-25-크로스-에디터.md
@@ -10,7 +10,7 @@ tags: Injection CVE
 
 고객사 모의침투 프로젝트 진행 중 사이트에서 사용중인 상용 솔루션 크로스에디터가 취약 버전으로 확인 되었고 해당하는 사이트에서 파일 다운로드 취약점을 찾아 취약 소스코드를 분석하게 되었습니다. `PoC가 공개되지 않아서 다른 모의해킹 및 취약점 점검 프로젝트에서 발견되지 못하고 잠재적으로 노후된 솔루션 버전을 사용`하고 있을 가능성이 높다고 생각했고 발견 이후 프로젝트 진행 시 기 취약점으로 쉽게 웹쉘을 업로드할 수 있는 경우가 많았습니다.
 
-![/assets/images/%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A9%E1%84%89%E1%85%B3%20%E1%84%8B%E1%85%A6%E1%84%83%E1%85%B5%E1%84%90%E1%85%A5%20(code%20injection)%20b619f8cee01f405e9d5fd967b305365a/1-1__.png](/assets/images/%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A9%E1%84%89%E1%85%B3%20%E1%84%8B%E1%85%A6%E1%84%83%E1%85%B5%E1%84%90%E1%85%A5%20(code%20injection)%20b619f8cee01f405e9d5fd967b305365a/1-1__.png)
+![1-00](/assets/images/%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A9%E1%84%89%E1%85%B3%20%E1%84%8B%E1%85%A6%E1%84%83%E1%85%B5%E1%84%90%E1%85%A5%20(code%20injection)%20b619f8cee01f405e9d5fd967b305365a/1-1__.png)
 
 ### 취약 소스코드
 
@@ -18,7 +18,7 @@ tags: Injection CVE
 - 패스워드 변경 시 패스워드는 암호화가 되어서 보관되지만 id 파라미터의 경우 전달받아 그대로 평문으로 저장됩니다.
 - 위의 특성을 통해 패스워드 변경을 처리하는 페이지에 운영체제 명령어를 실행하는 소스코드 인젝션 시 비밀번호 변경 처리 페이지가 웹쉘로 탈바꿈되어 침투가 가능합니다.
 
-![/assets/images/%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A9%E1%84%89%E1%85%B3%20%E1%84%8B%E1%85%A6%E1%84%83%E1%85%B5%E1%84%90%E1%85%A5%20(code%20injection)%20b619f8cee01f405e9d5fd967b305365a/1-2_1_.png](/assets/images/%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A9%E1%84%89%E1%85%B3%20%E1%84%8B%E1%85%A6%E1%84%83%E1%85%B5%E1%84%90%E1%85%A5%20(code%20injection)%20b619f8cee01f405e9d5fd967b305365a/1-2_1_.png)
+![1-0](/assets/images/%E1%84%8F%E1%85%B3%E1%84%85%E1%85%A9%E1%84%89%E1%85%B3%20%E1%84%8B%E1%85%A6%E1%84%83%E1%85%B5%E1%84%90%E1%85%A5%20(code%20injection)%20b619f8cee01f405e9d5fd967b305365a/1-2_1_.png)
 
 ### 취약점 전제조건
 
